// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> component its snapshot matches story Default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  gap: 1rem;
}

.c1 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c1 svg {
  max-height: 100%;
}

@media (min-width:672px) {
  .c0 {
    -webkit-flex-wrap: no-wrap;
    -ms-flex-wrap: no-wrap;
    flex-wrap: no-wrap;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 cds--btn cds--btn--secondary"
      tabindex="0"
      type="button"
    >
      Secondary button
       
    </button>
    <button
      class="c1 cds--btn cds--btn--primary"
      tabindex="0"
      type="button"
    >
      Primary button
       
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> component its snapshot matches story LeftAligned 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  gap: 1rem;
}

.c1 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c1 svg {
  max-height: 100%;
}

@media (min-width:672px) {
  .c0 {
    -webkit-flex-wrap: no-wrap;
    -ms-flex-wrap: no-wrap;
    flex-wrap: no-wrap;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 cds--btn cds--btn--secondary"
      tabindex="0"
      type="button"
    >
      Secondary button
       
    </button>
    <button
      class="c1 cds--btn cds--btn--primary"
      tabindex="0"
      type="button"
    >
      Primary button
       
    </button>
  </div>
</div>
`;
